log
Thu 05 Oct 2023 09:12:20 PM UTC: 
 tests:  0|5
total_score: 0/70
e5da5ed
Thu 05 Oct 2023 09:23:45 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
   52 |     return 1;
      |     ^~~~~~
sudoku.c:49:7: error: unused variable ‘miniSudo’ [-Werror=unused-variable]
   49 |   int miniSudo[9][9] = {0};
      |       ^~~~~~~~
sudoku.c:48:7: error: unused variable ‘colu’ [-Werror=unused-variable]
   48 |   int colu[9][9] = {0};
      |       ^~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
de300cf
Thu 05 Oct 2023 09:23:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:3: error: expected ‘,’ or ‘;’ before ‘int’
   50 |   int num;
      |   ^~~
sudoku.c:49:7: error: unused variable ‘miniSudo’ [-Werror=unused-variable]
   49 |   int miniSudo[9][9] = {0}
      |       ^~~~~~~~
sudoku.c:48:7: error: unused variable ‘colu’ [-Werror=unused-variable]
   48 |   int colu[9][9] = {0};
      |       ^~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
93a2974
Thu 05 Oct 2023 09:23:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:7: error: unused variable ‘num’ [-Werror=unused-variable]
   50 |   int num;
      |       ^~~
sudoku.c:49:7: error: unused variable ‘miniSudo’ [-Werror=unused-variable]
   49 |   int miniSudo[9][9] = {0};
      |       ^~~~~~~~
sudoku.c:48:7: error: unused variable ‘colu’ [-Werror=unused-variable]
   48 |   int colu[9][9] = {0};
      |       ^~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
728aa3e
Thu 05 Oct 2023 09:24:34 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  3|4
total_score: 20/70
ca17fac
